[tool.poetry]
name = "multilabel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
graphviz = "^0.20.1"
jupyterlab = "^3.6.1"
dtreeviz = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
